--- a/public/index.html
+++ b/public/index.html
@@ -11,7 +11,7 @@
     <link rel="stylesheet" href="//at.alicdn.com/t/c/font_3832401_lyx1hsdvyee.css" />
     <link
       rel="shortcut icon"
-      href="<%= process.env.VUE_APP_PRODUCT_MODEL === 'shuyun' ? '/favicon-shuyun.ico' : '/favicon.ico' %>"
+      href="<%= process.env.VUE_APP_PLATFORM === 'shuyun' ? '/favicon-shuyun.ico' : '/favicon.ico' %>"
     />
     <link rel="stylesheet" href="<%= BASE_URL %>loading.css" data-app-loading="inject-css" />
   </head>
